--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "jeanine-gonzalez",
   "version": "0.1.0",
   "private": true,
+  "homepage": "jeaninegonzalez.com",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "moment": "^2.24.0",
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
