--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "jeanine-gonzalez",
   "version": "0.1.0",
+  "homepage": "https://jeaninegonzalez.com",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
