--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
+    "react-calendly": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-parallax": "^3.0.3",
     "react-scripts": "3.4.1",
